<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
          android:title="Search text"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/menu_overflow" android:icon="@drawable/ic_action_overflow" android:title="more" android:showAsAction="always">
        <menu>
            <item android:id="@+id/add_record" android:icon="@drawable/ic_action_add_data" android:title="@string/add_record"/>
            <item android:id="@+id/add_record_from_template" android:icon="@drawable/ic_action_add_from_template" android:title="@string/add_record_from_template"/>
            <item android:id="@+id/remove_record" android:icon="@drawable/ic_action_remove_data" android:title="@string/remove_records"/>
            <item android:id="@+id/change_password" android:icon="@drawable/ic_action_change_password" android:title="@string/change_password"/>
            <item android:id="@+id/export_to_file" android:icon="@drawable/ic_action_export" android:title="@string/export_to_file"/>
            <item android:id="@+id/import_from_file" android:icon="@drawable/ic_action_import" android:title="Import from file"/>
        </menu>
    </item>
</menu>